@@ -1,3 +1,9 @@
+2012-07-04  Donal K. Fellows  <dkf@users.sf.net>
+
+	* win/tkWinDialog.c (GetFileNameW): [Bug 3540127]: Clean up the tables
+	of options for the file dialogs so that there's no longer any need to
+	have mysterious increments.
+
 2012-06-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/configure.in:  Link cygwin wish.exe with win32 tk.dll, only
